# anymock

./: CHANGELOG.md  Cargo.toml  README.md  ROADMAP.md
.github/workflows/: check.yml
src/: json.rs  lib.rs  matchers.rs
src/ws/: builders.rs  mod.rs  stubs.rs
tests/: ws.rs
