[package]
name = "anymock"
version = "0.4.1"
edition = "2024"
authors = ["Manuel Garcia De la Vega Hoyo <manuelgdlvh@gmail.com>"]

license = "MIT/Apache-2.0"

repository = "https://github.com/manuelgdlvh/anymock"
documentation = "https://docs.rs/anymock/"

description = "A Rust mocking crate designed to simulate and test external communication over common network protocols."

keywords = [ "ws", "test", "mocking", "mock" ]
categories = [ "development-tools::testing", "development-tools" ]


[dependencies]
tungstenite = {version = "0.28.0", optional = true}
serde = "1.0.228"
serde_json = "1.0.145"
regex = "1.12.2"
rand = "0.9.2"

[lib]
name = "anymock"
path = "src/lib.rs"

[features]
default = ["ws"]
ws = ["dep:tungstenite"]

[[test]]
name = "ws"
path = "tests/ws.rs"


